<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" tools:layout_editor_absoluteY="11dp" tools:layout_editor_absoluteX="-37dp"
            android:background="#03A9F4">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_launcher_foreground"
                android:id="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:contentDescription="@string/image_description"/>
        <TextView
                android:text="@string/placeholder"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/TextStyle"/>
        <Button
                android:text="@string/true_button_text"
                android:id="@+id/true_button"
                app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/false_button" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" style="@style/ButtonStyle"/>
        <Button
                android:text="@string/false_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/false_button"
                app:layout_constraintStart_toEndOf="@+id/true_button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:backgroundTint="#3F51B5"
        />
        <Button
                android:text="@string/next_button_text"
                android:layout_width="85dp"
                android:layout_height="50dp" android:id="@+id/next_button"
                app:layout_constraintTop_toBottomOf="@+id/true_button"
                app:layout_constraintStart_toEndOf="@+id/prev_button"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp" android:backgroundTint="#FFEB3B" android:layout_marginStart="8dp"
                style="@style/ButtonStyle"/>
        <Button
                android:text="@string/prev_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/prev_button"
                app:layout_constraintTop_toBottomOf="@+id/false_button" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/next_button"
                android:layout_marginTop="32dp" app:layout_constraintHorizontal_chainStyle="packed"
                android:backgroundTint="#FFEB3B" style="@style/ButtonStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>